# rootme-challenge

./: README.md  pyproject.toml
rootme/: __main__.py  client.py  protocol.py
